--- a/src/App.css
+++ b/src/App.css
@@ -39,7 +39,7 @@
   font-style: normal;
   text-align: center;
   color: #2F2E2E;
-  font-size: 35px;
+  font-size: 30px;
   letter-spacing: 0.06em;
 
 }
@@ -70,8 +70,8 @@
   font-family: Playfair Display;
   font-style: normal;
   font-weight: normal;
-  font-size: 27px;
-  line-height: 36px;
+  font-size: 24px;
+  line-height: 30px;
   text-align: center;
   color: #2F2E2E;
 
@@ -92,6 +92,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  border:1px solid black;
 }
 
 .whyus .wcard .icon{
@@ -239,7 +240,7 @@
 
 .landingpage .title{
   text-align: center;
-  padding-top: 6%;
+  padding-top: 5%;
 
 }
 
@@ -247,8 +248,8 @@
   font-family: Playfair Display;
   font-style: normal;
   font-weight: normal;
-  font-size: 70px;
-  line-height: 107px;
+  font-size: 60px;
+  line-height: 90px;
   text-align: center;
   color: #2F2E2E;
   letter-spacing: 0.05em;
@@ -258,7 +259,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding:100px 0;
+  padding:80px 0;
 }
 
 .landingpage .landingdetails{
@@ -283,7 +284,7 @@
 
 
 .landingpage .landingdetails .lcard{
-  width:300px;
+  width:250px;
   display: flex;
   text-align: center;
 }
@@ -291,7 +292,7 @@
 
 
 .landingpage .landingdetails .llogo{
-  font-size: 80px;
+  font-size: 60px;
 }
 
 
@@ -310,7 +311,7 @@
   font-family: 'Playfair Display';
   font-style: normal;
   font-weight: bold;
-  font-size: 24px;
+  font-size: 22px;
   text-align: center;
   color: #2F2E2E;
 
@@ -323,7 +324,7 @@
   font-style: normal;
   font-weight: bold;
   font-size: 14px;
-  line-height: 21px;
+  line-height: 18px;
   text-align: center;
   color: #2F2E2E;
   letter-spacing: 0.07em;
@@ -358,7 +359,7 @@
   font-family: Inter;
   font-style: normal;
   font-weight: normal;
-  font-size: 18px;
+  font-size: 16px;
   color: #2F2E2E;
   padding:0 15px;
   letter-spacing: 0.04em;
@@ -373,7 +374,7 @@
   font-family: Playfair Display;
   font-style: normal;
   font-weight: bold;
-  font-size: 48px;
+  font-size: 40px;
   color: #2F2E2E;
   letter-spacing: 0.04em;
 
@@ -411,10 +412,10 @@
 
 .projects .pcard .pcarddata h2{
   font-family: 'Playfair Display';
-  font-size: 18px;
+  font-size: 16px;
   color: #2F2E2E;
   letter-spacing: 0.04em;
-  line-height: 20px;
+  line-height: 16px;
   text-align: center;
 
 
@@ -446,16 +447,16 @@
   font-family: Barlow;
   font-style: normal;
   font-weight: 600;
-  font-size: 28px;
+  font-size: 24px;
   color: #FAFAFA;
 }
 .footer .fcard p{
   font-family: Inter;
   font-style: normal;
   font-weight: normal;
-  font-size: 14px;
+  font-size: 12px;
   color: #FAFAFA;
   letter-spacing: 0.04em;;
-  line-height: 20px;
+  line-height: 18px;
 
 }
