--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,16 @@
   overflow: hidden;
 }
 
+.al {
+  background-image: linear-gradient(rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.4)),
+    url("images/albg.png");
+  background-repeat: no-repeat;
+  background-size:cover;
+  background-position:center;
+  min-height: 105vh;
+  overflow: hidden;
+}
+
 .navigation{
   font-family:sans-serif;
 
@@ -464,4 +474,40 @@
   letter-spacing: 0.04em;;
   line-height: 18px;
 
+}
+
+.al .navigation{
+  background-color: rgb(239,239,239,0.9);
+  height:15vh;
+  color:black;
+  box-shadow: 5px 5px 5px 5px rgb(239,239,239);
+}
+
+
+.al .content{
+  height: 90vh;
+  width:50%;
+  padding:11% 2.5%;
+}
+
+.al .content h1{
+  font-family: Playfair Display;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 60px;
+  color: #254D4D;
+  line-height: 60px;
+  letter-spacing: 0.04em;
+
+}
+
+.al .content p{
+  font-family: Playfair Display;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 20px;
+  color: #254D4D;
+  padding:25px 0;
+  letter-spacing: 0.04em;
 }
