--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
   scroll-behavior: smooth;
 
 }
-/* 
+
 .landingpage {
   background-image: linear-gradient(rgba(255, 255, 255, 0.4), rgba(255, 255, 255, 0.4)),
     url("images/image.png");
@@ -25,7 +25,7 @@
   background-position:center;
   min-height: 105vh;
   overflow: hidden;
-} */
+}
 
 .navigation{
   font-family:sans-serif;
