--- a/src/App.css
+++ b/src/App.css
@@ -760,3 +760,180 @@ background-color: #f5f4f4;
 .landingpage2 .svg{
   padding-top: 100px;
 }
+
+
+/* Contacts */
+
+
+
+.contact{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  background-color:#F8F5F1;
+  padding-top:80px;
+  overflow: hidden;
+}
+
+.contact .map{
+  width: 100%;
+}
+
+.contactcontainer{
+  position:relative;
+  bottom:200px;
+  width:60%;
+  
+  
+  
+  
+  
+}
+
+.contactcontainer .title h1{
+  color:#F8F5F1;
+  padding:20px 0px;
+  font-family: Mulish;
+  font-weight: 500;
+  font-size: 30px;
+  letter-spacing: 0.04em;
+  text-shadow: blanchedalmond;
+}
+
+  .contactcontainer .box{
+    background-color:#F8F5F1;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    box-shadow:5px 5px 5px rgb(168, 161, 161);
+    height:500px;
+    border-radius:5px;
+  }
+
+  .contactcontainer .box .left{
+    background-color: #4B4F97;
+    width:40%;
+    padding:30px;
+    color:rgb(231, 219, 219);
+    height: 100%;
+  }
+
+  .contactcontainer .box .right{
+    width:60%;
+    padding:30px;
+    height: 100%;
+
+  }
+
+  .contactcontainer .box .left h2{
+    font-family: Mulish;
+    font-size: 20px;
+    font-weight: 800;
+    letter-spacing: 0.03em;
+  }
+
+
+
+  .contactcontainer .box .left .info{
+    height: 100%;
+    /* padding:30px 0px; */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .contactcontainer .box .left h3{
+    font-family: Mulish;
+    font-size: 16px;
+    font-weight: 500;
+    letter-spacing: 0.03em;
+    padding:15px 0;
+    display: inline-flex;
+    align-items:flex-start
+
+  }
+
+  .contactcontainer .box .left h4{
+    font-family: Mulish;
+    font-size: 16px;
+    font-weight: 500;
+    letter-spacing: 0.03em;
+  }
+
+  .contactcontainer .right h2{
+    font-family: Mulish;
+    font-size: 20px;
+    font-weight: 800;
+    letter-spacing: 0.03em;
+  }
+
+  .contactcontainer .right form{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: left;
+    align-items: center;
+  }
+
+  .contactcontainer .right form .input_field{
+    margin:10px;
+    padding:10px 0px;
+  }
+
+  .contactcontainer .right form .input_field input{
+    background: transparent;
+    border:none;
+    border-bottom: 1px solid rgb(143, 138, 138);
+    padding:10px 0px;
+    font-family: Mulish;
+
+
+    
+  }
+
+  .contactcontainer .right form .input_field input::placeholder{
+    font-size: 14px;
+    letter-spacing: 0.03em;
+    font-family: Mulish;
+
+    
+  }
+
+  .contactcontainer .right form .input_field textarea::placeholder{
+    font-size: 14px;
+    letter-spacing: 0.03em;
+    font-family: Mulish;
+    
+  }
+
+
+  
+  .contactcontainer .right form .input_field textarea{
+    background: transparent;
+    border:none;
+    border-bottom: 1px solid rgb(143, 138, 138);
+    padding:10px 0px;
+    width:100%;
+    font-family: Mulish;
+
+
+  }
+
+  .contactcontainer .button{
+    width:100%;
+  }
+
+
+  .contactcontainer .button input{
+    background-color: #4B4F97;
+    color:white;
+    padding:10px 40px;
+    border:none;
+    border-radius: 5px;
+    margin:5px;
+    text-align: center;
+    font-family: Mulish;
+    letter-spacing: 0.03em;
+    font-weight: 500;
+  }
