--- a/src/App.css
+++ b/src/App.css
@@ -32,10 +32,177 @@
 
 }
 
+.askcontainer{
+  background-image: linear-gradient(rgba(82, 76, 76, 0.4), rgba(173, 160, 160, 0)),
+  url("images/askbg.jpg");
+  background-repeat: no-repeat;
+  background-size:cover;
+  background-position:center;
+  min-height: 105vh;
+  overflow: hidden;
+}
+
+.askcontainer .askcontent{
+  height:80vh;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: flex-end;
+  align-items: center;
+  color:white;
+  padding-bottom: 30px;
+
+}
+
+
+.askcontainer .askcontent h1{
+  font-family: Mulish;
+  font-weight: bold;
+  letter-spacing: 0.03em;
+  text-align: center;
+
+
+}
+
+.askcontainer .askcontent p{
+  font-family: Mulish;
+  letter-spacing: 0.09em;
+  width:60%;
+  padding-top: 30px;
+  text-align: center;
+}
+
+.askcontainer .askcontent .enterbutton{
+
+  padding-top: 30px;
+
+}
+.askcontainer .askcontent a{
+  text-decoration: none;
+  border:none;
+}
+
+.askcontainer .askcontent button{
+  background-color: #0a4cad;
+  color:white;
+  font-family: Mulish;
+  letter-spacing: 0.09em;
+  text-align: center;
+  font-weight: bold;
+  padding:15px 40px;
+  font-size: 20px;
+  border:none;
 
 
 
-/* Whu us */
+}
+
+
+
+/* Calculation */
+
+
+
+.calculationcontainer{
+  background-image: linear-gradient(rgba(49, 46, 46, 0.4), rgba(173, 160, 160, 0)),
+  url("images/calcbg.jpg");
+  background-repeat: no-repeat;
+  background-size:cover;
+  background-position:center;
+  height: 70vh;
+  overflow: hidden;
+}
+
+.calculationcontainer .calculationcontent{
+  height:65vh;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
+  color:white;
+  padding-top: 40px;
+
+}
+
+
+.calculationcontainer .calculationcontent h1{
+  font-family: Mulish;
+  font-weight: bold;
+  letter-spacing: 0.03em;
+  text-align: center;
+  font-size: 55px;
+
+
+}
+
+.calculationcontainer .calculationcontent p{
+  font-family: Mulish;
+  letter-spacing: 0.09em;
+  width:60%;
+  padding-top: 30px;
+  text-align: center;
+  font-size: 20px;
+  font-weight: 500;
+
+}
+
+.calculationcontainer .calculationcontent .searchbutton{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+
+.calculationcontainer .calculationcontent .searchbutton .input_field input{
+  width:520px;
+  padding:12px 40px;
+  font-family: Mulish;
+  letter-spacing: 0.05em;
+}
+
+
+.calculationcontainer .calculationcontent button{
+  background-color: #1c3988;
+  color:white;
+  font-family: Mulish;
+  letter-spacing: 0.09em;
+  text-align: center;
+  font-weight: bold;
+  padding:11px 25px;
+  font-size: 20px;
+  border:none;
+  margin-left: 5px;
+
+}
+
+.calculationcontainer .calculationcontent button:hover{
+  cursor: pointer;
+}
+
+.calculationsecond h1{
+  text-align: center;
+  padding:35px 0;
+  font-family: Mulish;
+  color: #333333;
+  font-size: 30px;
+  font-weight: 600;
+  letter-spacing: 0.05em;
+
+}
+
+.calculationsecond .pcarddata h2{
+  font-family: Mulish;
+  color: #333333;
+  font-size: 30px;
+  font-weight: 500;
+  letter-spacing: 0.08em;
+
+}
+
+/* Why us */
 
 
 
